<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_emission"
            android:icon="@drawable/emissions_icon"
            android:title="@string/Emission" />
        <item
            android:id="@+id/nav_archives"
            android:icon="@drawable/archive_icon"
            android:title="@string/Archives" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/testimony_icon"
            android:title="@string/Messages" />
    </group>

    <item android:title="@string/others">
        <menu>
            <item
                android:id="@+id/nav_temoigner"
                android:icon="@drawable/temoignage_icon"
                android:title="@string/testify" />
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/settings_icon"
                android:title="@string/action_settings" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/info_icon"
                android:title="@string/about" />
        </menu>
    </item>

</menu>
