<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp">

    <TextView
        android:id="@+id/txt_settings_lang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/language" />

    <RadioGroup
        android:id="@+id/language_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radio_en"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/english" />

        <RadioButton
            android:id="@+id/radio_fr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/francais" />

        <RadioButton
            android:id="@+id/radio_run"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ikirundi" />
    </RadioGroup>

    <TextView
        android:id="@+id/txt_settings_theme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/theme" />

    <RadioGroup
        android:id="@+id/color_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radio_bleu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/holo_blue_dark"
            android:text="@string/blue"
            android:textColor="#fff"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_margin="2dp"/>

        <RadioButton
            android:id="@+id/radio_marron"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/maroon"
            android:textColor="#fff"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_margin="2dp" />

        <RadioButton
            android:id="@+id/radio_vert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#7fa87f"
            android:text="@string/green"
            android:textColor="#fff"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_margin="2dp" />
    </RadioGroup>
</LinearLayout>