<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="start"
        android:layout_height="wrap_content"
        android:id="@+id/cardLayout2">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <LinearLayout
                android:id="@+id/chat_contenue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <android.support.v7.widget.CardView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center"
                    android:layout_marginRight="10dp"
                    android:layout_marginEnd="10dp"
                    app:cardCornerRadius="30dp">
                    <ImageView
                        android:id="@+id/img_card_emission"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"/>
                </android.support.v7.widget.CardView>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/lbl_title_card_emission"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:lines="2"
                            android:text="TextView TextView"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/lbl_date_card_emmision"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="TextView"
                            android:textSize="14sp"/>

                        <TextView
                            android:id="@+id/lbl_author_card_emmision"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="TextView"
                            android:textSize="14sp"/>
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/options_emission_online"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true" >

                        <LinearLayout
                            android:id="@+id/widget_emission_resume_down"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:visibility="invisible"
                            android:orientation="vertical">
                            <Button
                                android:id="@+id/btn_card_emission_resume_down"
                                style="@style/Widget.AppCompat.Button.Borderless"
                                android:layout_width="36dp"
                                android:layout_height="36dp"
                                android:layout_gravity="center"
                                android:background="@drawable/colored_play_icon"/>

                            <TextView
                                android:id="@+id/txt_emission_down_resume"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:textSize="10sp"
                                android:text="@string/resume"/>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="2dp"
                            android:layout_marginStart="2dp"
                            android:orientation="vertical">
                            <Button
                                android:id="@+id/btn_card_emission_download"
                                style="@style/Widget.AppCompat.Button.Borderless"
                                android:layout_width="36dp"
                                android:layout_height="36dp"
                                android:layout_gravity="center"
                                android:background="@drawable/download_icon"/>

                            <TextView
                                android:id="@+id/txt_emission_download"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:textSize="10sp"
                                android:text="@string/download"/>
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/options_emission_offline"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        android:orientation="horizontal"
                        android:layout_centerVertical="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true" >
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">
                            <Button
                                android:id="@+id/btn_card_emission_share"
                                style="@style/Widget.AppCompat.Button.Borderless"
                                android:layout_width="36dp"
                                android:layout_height="36dp"
                                android:layout_gravity="center"
                                android:background="@drawable/share_icon"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:textSize="10sp"
                                android:text="@string/share"/>
                        </LinearLayout>
                        <!--<LinearLayout-->
                            <!--android:layout_width="wrap_content"-->
                            <!--android:layout_height="wrap_content"-->
                            <!--android:layout_marginLeft="2dp"-->
                            <!--android:orientation="vertical">-->
                            <!--<Button-->
                                <!--android:id="@+id/btn_card_emmission_delete"-->
                                <!--style="@style/Widget.AppCompat.Button.Borderless"-->
                                <!--android:layout_width="36dp"-->
                                <!--android:layout_height="36dp"-->
                                <!--android:layout_gravity="center"-->
                                <!--android:background="@drawable/delete_icon"/>-->
                            <!--<TextView-->
                                <!--android:layout_width="wrap_content"-->
                                <!--android:layout_height="wrap_content"-->
                                <!--android:textSize="10sp"-->
                                <!--android:layout_gravity="center"-->
                                <!--android:text="@string/delete"/>-->
                        <!--</LinearLayout>-->
                    </LinearLayout>
                </RelativeLayout>
            </LinearLayout>

            <ProgressBar
                android:id="@+id/progressBar_download"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:progressDrawable="@drawable/progress_drawable"
                android:scaleY="30"
                android:visibility="gone"/>
        </android.support.v7.widget.CardView>
    </LinearLayout>

</LinearLayout>
